# langchain-crash-course

./: .gitignore  README.md  pip.ini  pyproject.toml
1_chat_models/: 2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_firebase.py
2_prompt_templates/: 1_prompt_template_basic.py
3_chains/: 4_chains_parallel.py  5_chains_branching.py
4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py  4_rag_embedding_deep_dive.py  5_rag_retriever_deep_dive.py  6_rag_one_off_question.py  7_rag_conversational.py  8_rag_web_scrape_firecrawl.py
5_agents_and_tools/tools_deep_dive/: 1_tool_constructor.py  3_tool_base_tool.py
chroma/: chroma.sqlite3
